# minideepagents

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
examples/: README.md
examples/better-harness-walkthrough/: .env.example  README.md  config.py  pyproject.toml
examples/better-harness-walkthrough/stages/: stage_01_eval_harness.md  stage_01_eval_harness.py  stage_02_inner_agent.md  stage_02_inner_agent.py  stage_03_surface.md  stage_03_surface.py  stage_04_patching.md  stage_04_patching.py  stage_05_outer_agent.md  stage_05_outer_agent.py  stage_06_train_holdout_split.md  stage_06_train_holdout_split.py  stage_07_outer_loop.md  stage_07_outer_loop.py  stage_08_multi_surface.md  stage_08_multi_surface.py
examples/better-harness-walkthrough/stages_a/: stage_01_eval_harness.md  stage_01_eval_harness.py  stage_02_inner_agent.md  stage_02_inner_agent.py  stage_03_surface.md  stage_03_surface.py  stage_04_patching.md  stage_04_patching.py  stage_05_outer_agent.md  stage_05_outer_agent.py  stage_06_train_holdout_split.md  stage_06_train_holdout_split.py  stage_07_outer_loop.md  stage_07_outer_loop.py  stage_08_multi_surface.md  stage_08_multi_surface.py
examples/better-harness-walkthrough/stages_b/: stage_09_workspace_file_surface.md  stage_09_workspace_file_surface.py  stage_10_run_layout.md  stage_10_run_layout.py  stage_11_proposer_workspace.md  stage_11_proposer_workspace.py  stage_12_scorecard_split.md  stage_12_scorecard_split.py  stage_13_example.toml  stage_13_toml_config_and_cli.md  stage_13_toml_config_and_cli.py  stage_14_runner_abstraction.md  stage_14_runner_abstraction.py
examples/deep_research_walkthrough/: .env.example  README.md  config.py  langgraph.json  pyproject.toml
examples/deep_research_walkthrough/stages/: _shared_tools.py  stage1_basic_agent.md  stage1_basic_agent.py  stage2_thinking_tool.md  stage2_thinking_tool.py  stage3_deep_agent.md  stage3_deep_agent.py  stage4_subagent.md  stage4_subagent.py  stage5_full_orchestrator.md  stage5_full_orchestrator.py  stage_01_basic_agent.md  stage_01_basic_agent.py  stage_02_thinking_tool.md  stage_02_thinking_tool.py  stage_03_deep_agent.md  stage_03_deep_agent.py  stage_04_subagent.md  stage_04_subagent.py  stage_05_full_orchestrator.md  stage_05_full_orchestrator.py
examples/deep_research_walkthrough/steps/: _shared_tools.py  step1_basic_agent.md  step1_basic_agent.py  step2_thinking_tool.md  step2_thinking_tool.py  step3_deep_agent.md  step3_deep_agent.py  step4_subagent.md  step4_subagent.py  step5_full_orchestrator.md  step5_full_orchestrator.py
examples/text-to-sql-agent-walkthrough/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
examples/text-to-sql-agent-walkthrough/scripts/: download_chinook.sh
examples/text-to-sql-agent-walkthrough/stages/: AGENTS.md  config.py  stage_01_raw_sql.md  stage_01_raw_sql.py  stage_02_llm_one_shot.md  stage_02_llm_one_shot.py  stage_03_schema_introspection.md  stage_03_schema_introspection.py  stage_04_react_loop.md  stage_04_react_loop.py  stage_05_create_agent_toolkit.md  stage_05_create_agent_toolkit.py  stage_06_deep_agent_minimal.md  stage_06_deep_agent_minimal.py  stage_07_agents_md.md  stage_07_agents_md.py  stage_08_skills.md  stage_08_skills.py  stage_09_filesystem_backend.md  stage_09_filesystem_backend.py
examples/text-to-sql-agent-walkthrough/stages/skills/query-writing/: SKILL.md
examples/text-to-sql-agent-walkthrough/stages/skills/schema-exploration/: SKILL.md
step_01_walkthrough/: 01_loop.py  02_todos.py  03_filesystem.py  03b_backends.py  04_subagents.py  06_skills.py  (+2 more)
(+62 files in other folders)
