[project]
name = "minideepagents"
version = "0.0.1"
description = "Pedagogical mini-implementation of the deepagents harness"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "langgraph-cli[inmem]>=0.4.24",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "step_01_walkthrough", "step_02_tiny_harness", "step_03_mini_clone"]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
