[project]
name = "deep-research-walkthrough"
version = "0.1.0"
description = "Step-by-step walkthrough of how the deep_research example is built"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.7",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph-cli[inmem]>=0.4.24",
    "markdownify>=1.2.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.7.24",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config"]
packages = ["stages"]
